// Jest Snapshot v1, https://goo.gl/fbAQLP

exports['Site admin user table invite date column test Test date is many days ago 1'] = `
<div
  className="cell"
>
  <time
    className="value"
    dateTime="2017-10-31T00:00:00-05:00"
  >
    October 31, 2017
  </time>
</div>
`;

exports['Site admin user table invite date column test Test date is now 1'] = `
<div
  className="cell"
>
  <span>
    Today
  </span>
</div>
`;

exports['Site admin user table invite date column test Test date is yesterday 1'] = `
<div
  className="cell"
>
  <span>
    Yesterday
  </span>
</div>
`;
